Change hashcode for performance